--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
+<html>
+  
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@900&family=Roboto:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@900&family=Roboto:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="styles.css">
 </head>
 
 <main id="main">
@@ -33,3 +37,4 @@
       >.
     </h3>
 </main>
+</html>
