--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@900&family=Roboto:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
- <link rel="stylesheet" href="styles.css">
+ <link rel="stylesheet" href="style.css">
 </head>
 
 <main id="main">
